adds requirements and updates README

--- a/config.cfg
+++ b/config.cfg
@@ -7,17 +7,17 @@ teacher_forcing_ratio=0.5
 
 [rnn]
 
-layer_type=lstm
-num_layers=2
+layer_type=gru
+num_layers=1
 hidden_size=256
 decoder_dropout=0.1
 
 [training]
 
-epochs=60000
+epochs=100000
 print_every=1000 
-save_every=10000 
+save_every=20000 
 plot_every=100
 lr=0.01
-lr_step_divisor=3
-lr_step_gamma=0.1
+lr_step_divisor=1
+lr_step_gamma=1
