--- a/config.cfg
+++ b/config.cfg
@@ -7,14 +7,14 @@ teacher_forcing_ratio=0.5
 
 [rnn]
 
-layer_type=gru
-num_layers=1
+layer_type=lstm
+num_layers=2
 hidden_size=256
-decoder_dropout=0.1
+decoder_dropout=0.2
 
 [training]
 
-epochs=100000
+epochs=200000
 print_every=1000 
 save_every=20000 
 plot_every=100
