--- a/config.cfg
+++ b/config.cfg
@@ -11,13 +11,14 @@ layer_type=lstm
 num_layers=2
 hidden_size=256
 decoder_dropout=0.2
+bidirectional=1
 
 [training]
 
-epochs=200000
+epochs=250000
 print_every=1000 
 save_every=20000 
 plot_every=100
-lr=0.01
+lr=0.001
 lr_step_divisor=1
 lr_step_gamma=1
